2004-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Enable LZW compression by default.

2004-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Don't enable Huffman compression
	for large images (> 16 Mpixels for the moment) in order to
	conserve memory.  When Huffman compression is enabled the entire
	image is buffered in memory prior to encoding and writing
	anything.  Huffman compression is a method of eliminating
	redundant data so when the Huffman compression is disabled, files
	sizes will be larger, but otherwise the image is the same.
	* wand/magick_wand.c (MagickSetPassphrase): String was being
	copied to a null pointer.  Now memory is allocated as required
	prior to a copy.
	Ensure that all unimplemented functions return a proper error
	report.

2004-07-01  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick: updated to GraphicsMagick v.1.2
	* BCBMagick\All: project GMlib-1.1.bpr has been replaced with
	GMlib.bpr
	* BCBMagick\All: project GMdll-1.1.bpr has been replaced with
	GMdll.bpr
	* BCBMagick\readme.txt: updated documentation.

2004-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): For -units, don't reset
	resolution if units are undefined. Report an error if the -units
	argument is not supported.

2004-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): When setting image units, also
	adjust existing image x_resolution and y_resolution so that
	existing image resolution is not trashed.
	(MogrifyImage): When re-sampling an image, report an error if the
	image does not contain a valid resolution.

2004-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (WritePCXImage): Support writing large PCX files.
	(WritePCXImage): Ensure that UndefinedResolution is handled
	properly. Avoid round-off error for centimeter based resolution.

2004-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
