@@ -1,3 +1,10 @@
+2004-07-09  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* coders/bmp.c (ReadBMPImage): Removed if-test on reading
+	red_mask, green_mask, and blue_mask.  These are only *valid*
+	under certain conditions, but they are always present in the
+	file.
+
 2004-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Enable LZW compression by default.
